# bot

./: .gitignore  LICENSE  README.md  bot.cabal  bot.nix  default.nix  nixpkgs-src.json
src/: Main.hs  eval.py
