name:                bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mt-caret/bot
license:             BSD3
license-file:        LICENSE
author:              Masayuki Takeda
maintainer:          Masayuki Takeda
copyright:           2017 Masayuki Takeda
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , authenticate-oauth
                     , bytestring
                     , text
                     , turtle
                     , foldl
                     , conduit
                     , time
                     , lens
                     , resourcet
                     , twitter-types-lens
                     , twitter-conduit
